<resources>
    <string name="app_name">BookChat</string>
    <string name="error_network_not_connected">네트워크가 연결되어 있지 않습니다.\n네트워크를 연결해주세요.</string>
    <string name="error_network_error">네트워크가 불안정합니다.\n잠시 후 다시 시도해주세요.</string>
    <string name="error_kakao_login">Kakao 로그인을 실패했습니다.</string>
    <string name="error_google_login">Google 로그인을 실패했습니다.</string>
    <string name="error_socket_connect">서버와의 연결을 실패했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="error_else">데이터 가져오기를 실패했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="error_else_2_line">데이터 가져오기를 실패했습니다.\n잠시 후 다시 시도해주세요.</string>
    <string name="gallery_permission_denied">[사진 및 동영상]\n권한을 허용해주세요.</string>
    <string name="gallery_permission_explained">[권한] - [사진 및 동영상]\n권한을 허용해주세요.</string>
    <string name="notification_permission_denied">[알림]\n권한을 허용해주세요.</string>
    <string name="notification_permission_explained">[권한] - [알림]\n권한을 허용해주세요.</string>
    <string name="login_main_slogan">책으로 연결되는 우리\n이제부터 북챗으로 대화해요</string>
    <string name="login_kakao_btn">카카오로 시작하기</string>
    <string name="login_google_btn">구글로 시작하기</string>
    <string name="login_fast_sign_up">3초만에 빠른 회원가입</string>
    <string name="login_forbidden_user">권한이 없는 접근이거나, 차단된 사용자입니다."\n 24시간 후에 다시 시도해 주세요.</string>
    <string name="login_device_warning_main">현재 기기로 접속하시겠습니까?</string>
    <string name="login_device_warning_sub">이전에 접속된 기기가 있다면 \n해당 기기의 접속은 해제됩니다.</string>
    <string name="sign_up_main">북챗에서 활동할\n프로필을 설정해 주세요.</string>
    <string name="sign_up_input_hint">닉네임을 입력해주세요</string>
    <string name="sign_up_submit_btn">북챗 시작하기</string>
    <string name="sign_up_user_nickname_length">%1$d / 20</string>
    <string name="sign_up_check_nickname_duplicate_btn">닉네임 중복 확인</string>
    <string name="name_check_status_short">최소 2자리 이상 입력해 주세요.</string>
    <string name="name_check_status_duplicate">이미 사용 중인 닉네임 입니다.</string>
    <string name="name_check_status_special_char">특수문자는 사용 불가능합니다.</string>
    <string name="name_check_status_perfect">사용 가능한 닉네임입니다.</string>
    <string name="select_taste_submit_btn">북챗 시작하기</string>
    <string name="select_taste_main">나의 독서 취향을\n선택해 주세요.</string>
    <string name="economy">경제</string>
    <string name="philosophy">철학</string>
    <string name="history">역사</string>
    <string name="travel">여행</string>
    <string name="health">건강</string>
    <string name="hobby">취미</string>
    <string name="humanities">인문</string>
    <string name="novel">소설</string>
    <string name="art">예술</string>
    <string name="design">디자인</string>
    <string name="development">개발</string>
    <string name="science">과학</string>
    <string name="magazine">잡지</string>
    <string name="religion">종교</string>
    <string name="character">인물</string>
    <string name="main_hello">안녕하세요</string>
    <string name="user_nickname">%s 님</string>
    <string name="main_book">독서 중인 도서</string>
    <string name="main_chat">참여 중인 채팅방</string>
    <string name="book_is_empty">도서가 없어요!</string>
    <string name="book_is_empty_sub_text">새로운 도서를 추가하고\n북챗을 사용해 보세요.</string>
    <string name="chat_room_is_empty">채팅방이 없어요!</string>
    <string name="chat_room_is_empty_sub_text">새로운 채팅방을 추가하고\n북챗을 나눠보세요.</string>
    <string name="channel_member_count">%1$d명</string>
    <string name="bookshelf">서재</string>
    <string name="wish_book">독서예정</string>
    <string name="complete_book">독서완료</string>
    <string name="reading_book">독서중</string>
    <string name="bookshelf_total_item_count_text">%1$d 권</string>
    <string name="already_in_bookshelf">이미 서재에 등록된 도서</string>
    <string name="bookshelf_delete_success">도서가 삭제되었습니다.</string>
    <string name="bookshelf_delete_wish_book">독서예정에서 삭제되었습니다.</string>
    <string name="bookshelf_delete_fail">도서 삭제를 실패했습니다.</string>
    <string name="bookshelf_delete_snack_bar">3초 뒤 도서가 삭제됩니다.</string>
    <string name="bookshelf_delete_snack_bar_cancel">실행취소</string>
    <string name="bookshelf_page_text">%1$dp</string>
    <string name="bookshelf_page_input_title">책갈피</string>
    <string name="bookshelf_page_input_fail">페이지 등록을 실패했습니다.</string>
    <string name="bookshelf_page_input_page">p</string>
    <string name="bookshelf_page_input_one">1</string>
    <string name="bookshelf_page_input_two">2</string>
    <string name="bookshelf_page_input_three">3</string>
    <string name="bookshelf_page_input_four">4</string>
    <string name="bookshelf_page_input_five">5</string>
    <string name="bookshelf_page_input_six">6</string>
    <string name="bookshelf_page_input_seven">7</string>
    <string name="bookshelf_page_input_eight">8</string>
    <string name="bookshelf_page_input_nine">9</string>
    <string name="bookshelf_page_input_zero">0</string>
    <string name="bookshelf_change_to_complete_success">독서완료로 변경되었습니다.</string>
    <string name="bookshelf_change_to_complete_fail">독서완료로 변경을 실패했습니다.</string>
    <string name="bookshelf_change_to_reading_success">독서중으로 변경되었습니다.</string>
    <string name="bookshelf_change_to_reading_fail">독서중으로 변경을 실패했습니다.</string>
    <string name="bookshelf_state_change_fail">도서 상태 변경을 실패했습니다.</string>
    <string name="bookshelf_request_add_book">서재에 도서를 추가해주세요.</string>
    <string name="bookshelf_add_book">도서 추가하기</string>
    <string name="book">도서</string>
    <string name="book_title">도서명</string>
    <string name="isbn">ISBN</string>
    <string name="channel_title">채팅방 제목</string>
    <string name="channel_tag">채팅방 TAG</string>
    <string name="search_filter">검색 필터</string>
    <string name="selected_search_filter">선택된 필터:</string>
    <string name="recommend_keyword">추천 검색어</string>
    <string name="recent_search_keyword">최근 검색어</string>
    <string name="related_book_name">관련 도서명</string>
    <string name="search_book_keyword_empty">검색어를 입력해주세요.</string>
    <string name="search_book_result_empty">검색어가 존재하지 않습니다.</string>
    <string name="search_window_hint">검색어를 입력해주세요.</string>
    <string name="bookshelf_register_success">[서재]에 도서가 등록되었습니다.</string>
    <string name="bookshelf_register_fail">[서재]에 도서 등록을 실패했습니다..</string>
    <string name="complete_bookshelf_register_success">[서재] - [독서완료]에\n도서가 등록되었습니다.</string>
    <string name="complete_bookshelf_register_fail">독서완료 등록을 실패했습니다.</string>
    <string name="complete_bookshelf_star_set_dialog">독서완료 별점</string>
    <string name="complete_bookshelf_star_set_empty">별점을 등록해주세요.</string>
    <string name="reading_bookshelf_register_success">[서재] - [독서중]에\n도서가 등록되었습니다.</string>
    <string name="reading_bookshelf_register_fail">독서중 등록을 실패했습니다.</string>
    <string name="wish_bookshelf_register_success">[서재] - [독서예정]에\n도서가 등록되었습니다.</string>
    <string name="wish_bookshelf_register_fail">독서예정 등록을 실패했습니다.</string>
    <string name="chat_room_result_empty">채팅방이 없어요!</string>
    <string name="chat_room_add_slogan">새로운 채팅방을 추가하고\n북챗을 나눠보세요.</string>
    <string name="book_result_empty">해당 도서가 없어요!</string>
    <string name="book_result_empty_sub">검색어를 다시 확인해 주세요.</string>
    <string name="book_report">독후감</string>
    <string name="book_report_writing_cancel_warning">독후감 작성을 취소하시겠습니까?\n작성중인 내용이 삭제됩니다.</string>
    <string name="book_report_delete_warning">독후감을 삭제하시겠습니까?\n삭제된 독후감은 복구할 수 없습니다.</string>
    <string name="book_report_make_fail">독후감 등록을 실패했습니다.</string>
    <string name="book_report_delete_success">독후감이 삭제되었습니다.</string>
    <string name="book_report_delete_fail">독후감 삭제를 실패했습니다.</string>
    <string name="book_report_revise_fail">독후감 수정을 실패했습니다.</string>
    <string name="agony_make_fail">고민 등록을 실패했습니다.</string>
    <string name="agony_make_input_hint">주제를 입력해 주세요.</string>
    <string name="agony_make_empty">주제를 입력해 주세요.</string>
    <string name="agony_delete_fail">고민 삭제를 실패했습니다.</string>
    <string name="agony_title_new_title_length">%1$d / 30</string>
    <string name="agony_title">고민 제목</string>
    <string name="agony_title_empty">제목을 입력해주세요.</string>
    <string name="agony_title_edit_success">제목이 수정되었습니다.</string>
    <string name="agony_title_edit_fail">제목 수정을 실패했습니다.</string>
    <string name="agony_record">고민기록</string>
    <string name="agony_record_delete_btn_text">삭제하기</string>
    <string name="agony_record_writing_cancel_warning">고민기록 작성을 취소하시겠습니까?\n작성중인 내용이 삭제됩니다.</string>
    <string name="agony_record_make_fail">고민기록 등록을 실패했습니다.</string>
    <string name="agony_record_revise_success">고민기록이 수정되었습니다.</string>
    <string name="agony_record_revise_fail">고민기록 수정을 실패했습니다.</string>
    <string name="agony_record_delete_success">고민기록이 삭제되었습니다.</string>
    <string name="agony_record_delete_fail">고민기록 삭제를 실패했습니다.</string>
    <string name="chat">채팅</string>
    <string name="make_chat_room_set_cover_image">커버 이미지 설정</string>
    <string name="make_chat_room_default_image_change">기본 이미지 변경</string>
    <string name="chat_room">채팅방</string>
    <string name="my_chat_room">나의 채팅방</string>
    <string name="make_chat_room">채팅방 만들기</string>
    <string name="make_chat_room_select">선택하기</string>
    <string name="make_chat_room_title_length">%1$d / 30</string>
    <string name="make_chat_room_tags_length">%1$d / 50</string>
    <string name="make_chat_room_title_hint">채팅방 제목을 작성해 주세요.</string>
    <string name="make_chat_room_tag_hint">#해시태그로 채팅방을 소개해 주세요.</string>
    <string name="make_chat_room_book_select">도서 선택</string>
    <string name="make_chat_room_fail">채팅방 생성을 실패했습니다.</string>
    <string name="enter_chat_room_fail">채팅방 입장에 실패했습니다.</string>
    <string name="my_page_title">나의 정보</string>
    <string name="heart_list">관심목록</string>
    <string name="notice">공지사항</string>
    <string name="invite">친구초대</string>
    <string name="account_setting">계정 설정</string>
    <string name="app_setting">앱 설정</string>
    <string name="terms_of_service">서비스 이용약관</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="open_source_license">오픈 라이선스</string>
    <string name="app_version">앱 버전</string>
    <string name="my_page_profile_edit_success">프로필이 수정되었습니다.</string>
    <string name="my_page_profile_edit_fail">프로필 수정을 실패했습니다.</string>
    <string name="my_page_profile_need_name_dup_check">닉네임 중복확인이 필요합니다.</string>
    <string name="user_edit_title">프로필 수정</string>
    <string name="duplicate_check">중복확인</string>
    <string name="user_nickname_length">%1$d / 20</string>
    <string name="submit_changed_profile">변경하기</string>
    <string name="user_profile_picture_setting">프로필 사진 설정</string>
    <string name="select_picture_from_gallery">앨범에서 사진 선택</string>
    <string name="select_picture_default_image">기본 이미지 적용</string>
    <string name="push_notification">푸시 알림</string>
    <string name="sign_out">로그아웃</string>
    <string name="withdraw">회원탈퇴</string>
    <string name="sign_out_fail">로그아웃을 실패했습니다.</string>
    <string name="withdraw_success">정상적으로 탈퇴되었습니다.</string>
    <string name="withdraw_fail">회원탈퇴를 실패했습니다.</string>
    <string name="logout_notice_other_device_login">다른 기기에서 로그인이 시도되었습니다.\n북챗을 이용하시려면\n다시 로그인을 진행해주세요.</string>
    <string name="withdraw_warning_content">회원탈퇴를 진행하시면\n참여 중인 모든 채팅방에서 나가게 되며,\n서재에 저장된 도서들, 독후감, 고민기록 등\n모든 정보가 삭제되며 복구가 불가능합니다.</string>
    <string name="withdraw_warning_channel_host_warning_content">*방장을 위임하지 않고 탈퇴 진행 시,\n방장으로 관리하셨던 채팅방은 삭제처리됩니다.</string>
    <string name="channel_name">채팅방 이름</string>
    <string name="channel_mute">채팅방 알림 끄기</string>
    <string name="channel_turn_on_notification">채팅방 알림 켜기</string>
    <string name="channel_top_pin">채팅방 상단 고정</string>
    <string name="channel_un_pin_">채팅방 상단 고정 해제</string>
    <string name="channel_list_item_capacity">%1$d 명</string>
    <string name="current_room_member_count">%1$d / %2$d 명</string>
    <string name="channel_last_active_time">마지막 활성화 : %1$s</string>
    <string name="user_ban_warning_dialog_title">채팅방 내보내기</string>
    <string name="user_ban_warning_dialog_content">채팅방에서 내보내시겠습니까?</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="add">추가하기</string>
    <string name="exit">나가기</string>
</resources>