<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="dialog"
            type="com.example.bookchat.ui.search.dialog.SearchFilterSelectDialog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/view_round_white_not_padding"
        android:minWidth="300dp"
        android:paddingVertical="30dp">

        <TextView
            android:id="@+id/search_filter_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:fontFamily="@font/notosanskr_bold"
            android:paddingHorizontal="20dp"
            android:text="@string/search_filter"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/search_filter_book_title_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:elegantTextHeight="true"
            android:fontFamily="@font/notosanskr_medium"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/book_title"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_filter_title_tv" />

        <TextView
            android:id="@+id/search_filter_book_isbn_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:elegantTextHeight="true"
            android:fontFamily="@font/notosanskr_medium"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/isbn"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_filter_book_title_btn" />

        <TextView
            android:id="@+id/search_filter_channel_title_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="?android:attr/selectableItemBackground"
            android:elegantTextHeight="true"
            android:fontFamily="@font/notosanskr_medium"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/channel_title"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_filter_book_isbn_btn" />

        <TextView
            android:id="@+id/search_filter_channel_tag_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:elegantTextHeight="true"
            android:fontFamily="@font/notosanskr_medium"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/channel_tag"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_filter_channel_title_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
