<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:elegantTextHeight="true"
        android:fontFamily="@font/notosanskr_bold"
        android:text="@string/chat_room_result_empty"
        android:textColor="#222222"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:elegantTextHeight="true"
        android:fontFamily="@font/notosanskr_regular"
        android:gravity="center"
        android:text="@string/chat_room_add_slogan"
        android:textColor="#222222"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView33"
        app:layout_constraintStart_toStartOf="@+id/textView33"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/make_channel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        android:elegantTextHeight="true"
        android:fontFamily="@font/notosanskr_regular"
        android:stateListAnimator="@null"
        android:text="@string/add"
        android:textColor="#5648FF"
        android:textSize="12sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="@+id/textView34"
        app:layout_constraintStart_toStartOf="@+id/textView34"
        app:layout_constraintTop_toBottomOf="@+id/textView34"
        app:strokeColor="#5648FF"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
