<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="dialog"
            type="com.example.bookchat.ui.mypage.useredit.dialog.ProfileEditDialog" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/view_round_white_not_padding"
        android:minWidth="300dp"
        android:paddingVertical="30dp">

        <TextView
            android:id="@+id/profile_picture_settings_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:fontFamily="@font/notosanskr_bold"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/user_profile_picture_setting"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/select_picture_from_gallery_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:elegantTextHeight="true"
            android:fontFamily="@font/notosanskr_medium"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/select_picture_from_gallery"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture_settings_title" />

        <TextView
            android:id="@+id/select_picture_default_image_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:elegantTextHeight="true"
            android:fontFamily="@font/notosanskr_medium"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/select_picture_default_image"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_picture_from_gallery_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
