<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="dialog"
            type="com.example.bookchat.ui.channel.userprofile.dialog.UserBanWarningDialog" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/view_round_white_not_padding"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:minWidth="300dp">

        <TextView
            android:id="@+id/warning_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:elegantTextHeight="true"
            android:text="@string/user_ban_warning_dialog_title"
            android:fontFamily="@font/notosanskr_bold"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/warning_content_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/notosanskr_medium"
            android:gravity="center"
            android:text="@string/user_ban_warning_dialog_content"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/warning_title_tv" />

        <View
            android:id="@+id/bottom_horizontal_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="45dp"
            android:layout_marginTop="20dp"
            android:background="#D9D9D9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/warning_content_tv" />

        <TextView
            android:id="@+id/cancelBtn_bookReportExit"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:onClick="@{() -> dialog.onClickCancelBtn()}"
            android:clickable="true"
            android:focusable="true"
            android:textSize="14sp"
            android:textColor="#000000"
            android:fontFamily="@font/notosanskr_medium"
            app:layout_constraintBottom_toBottomOf="@+id/bottom_vertical_divider"
            app:layout_constraintEnd_toStartOf="@+id/bottom_vertical_divider"
            app:layout_constraintStart_toStartOf="@+id/bottom_horizontal_divider"
            app:layout_constraintTop_toTopOf="@+id/bottom_vertical_divider"/>

        <View
            android:id="@+id/bottom_vertical_divider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="#D9D9D9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/bottom_horizontal_divider"
            app:layout_constraintStart_toStartOf="@+id/bottom_horizontal_divider"
            app:layout_constraintTop_toBottomOf="@+id/bottom_horizontal_divider" />

        <TextView
            android:id="@+id/okBtn_bookReportExit"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/confirm"
            android:onClick="@{() -> dialog.onClickOkBtn()}"
            android:clickable="true"
            android:focusable="true"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="#5648FF"
            android:fontFamily="@font/notosanskr_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/bottom_horizontal_divider"
            app:layout_constraintStart_toEndOf="@+id/bottom_vertical_divider"
            app:layout_constraintTop_toTopOf="@+id/bottom_vertical_divider" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
